--- a/palindrome.css
+++ b/palindrome.css
@@ -1,18 +1,25 @@
 body{
      
     background-color:cornsilk;
+    
 }
 #heading{
     text-align: center;
     color:blue;
     margin-top: 2cm;
 }
+
+.container-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 60vh; 
+}
 .container{
     height:10cm;
     width: 10cm;
-    margin-left:13cm;
-    margin-top:2cm;
-    border: solid 5px black;
+    
+    border: solid 2px black;
     border-radius:10px;
     background-color: skyblue;
 }
